--- a/app/src/app/note/note.component.scss
+++ b/app/src/app/note/note.component.scss
@@ -77,6 +77,7 @@ $text-secondary: #cad3d7;
 }
 
 .notes {
+
   li {
     list-style: none;
 
@@ -84,6 +85,9 @@ $text-secondary: #cad3d7;
       a.note-favorite {
         float: right;
         margin-right: .3em;
+        margin-top: -3em;
+        padding: .1em;
+        cursor: pointer;
       }
     }
 
@@ -97,6 +101,7 @@ $text-secondary: #cad3d7;
         font-size: 1.5em;
         font-weight: 700;
         margin-bottom: 0;
+        cursor: pointer;
       }
 
       .note-content {
@@ -113,11 +118,14 @@ $text-secondary: #cad3d7;
 
   div.note:hover {
     animation: divNoteHover 0.2s forwards;
-    transition: animation 0.3s ease-in-out;
   }
 
-  a:hover {
-    animation: aNoteDeleteHover 0.5s forwards;
+  a.note-favorite:hover {
+    animation: aNoteFavoriteHover 0.5s forwards;
+  }
+
+  a.note-delete:hover {
+    animation: aNoteDeleteHover 0.4s forwards;
   }
 }
 
@@ -136,5 +144,14 @@ $text-secondary: #cad3d7;
   }
   to {
     color: red;
+  }
+}
+
+@keyframes aNoteFavoriteHover {
+  from {
+    color: $text-primary;
+  }
+  to {
+    color: orange;
   }
 }
