--- a/app/src/app/note/note.component.html
+++ b/app/src/app/note/note.component.html
@@ -1,49 +1,89 @@
-<a routerLink="/auth">Auth</a>
-<div class="container">
-  <form (submit)="addNote()" class="note-form">
-    <a (click)="hideNoteForm = !hideNoteForm">
-      <p class="note-title">New Note</p>
-    </a>
-    <!-- Note title -->
-    <div [hidden]="hideNoteForm">
-      <label for="note-input-title" class="note-input">Title</label>
-      <input type="text" name="noteInputTitle" id="note-input-title" class="note-input" [(ngModel)]="newNote.title"
-        maxlength="200" />
-
-      <!-- Note content -->
-      <label for="note-input-content" class=" note-input">Content</label>
-      <textarea type="text" name="noteInputContent" id="note-input-content" class="note-input" cols="30" rows="10"
-        maxlength="1000" [(ngModel)]="newNote.content"></textarea>
-
-      <input type="submit" value="Add note" class="note-submit">
-    </div>
-  </form>
-</div>
+<a (click)="logoutUser()">Logout</a>
 
 <div class="container">
-  <div class="notes">
-    <li *ngFor="let note of notes | async; let id = index;">
-      <div class="note">
-        <ul class="note">
-          <!-- <a class="note-title" (click)="toggleDisplay()"><p class="note-title">{{ note.title }}</p></a> -->
-          <div class="note-header">
-            <a class="note-title" (click)="hideme[note.id] = !hideme[note.id]" (*ngSwitchDefault)="hideme[id] = true">
-              <p class="note-title">{{ note.title }}</p>
-            </a>
-            <a class="note-favorite" (click)="debug(note)">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-star"
-                viewBox="0 0 16 16">
-                <path
-                  d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-              </svg>
-            </a>
-          </div>
-          <!-- <p class="note-content" [hidden]="isShow">{{ note.content }}</p> -->
-          <p class="note-content" [hidden]="!hideme[note.id]">{{ note.content }}</p>
-          <a class="note-delete" [hidden]="!hideme[note.id]" (click)="deleteNote(note)"
-            style="text-decoration: underline;">Delete</a>
-        </ul>
+  <div class="wrapper" *ngIf="afAuth.user | async as user; else showLogin">
+
+    <form (submit)="addNote(user.uid)" class="note-form">
+      <a (click)="hideNoteForm = !hideNoteForm">
+        <p class="note-title">New Note</p>
+      </a>
+      <!-- Note title -->
+      <div [hidden]="hideNoteForm">
+        <label for="note-input-title" class="note-input">Title</label>
+        <input type="text" name="noteInputTitle" id="note-input-title" class="note-input" [(ngModel)]="newNote.title"
+          maxlength="200" />
+
+        <!-- Note content -->
+        <label for="note-input-content" class=" note-input">Content</label>
+        <textarea type="text" name="noteInputContent" id="note-input-content" class="note-input" cols="30" rows="10"
+          maxleng th="1000" [(ngModel)]="newNote.content"></textarea>
+
+        <input type="submit" value="Add note" class="note-submit">
       </div>
-    </li>
+    </form>
+
+    <div class="notes">
+      <li *ngFor="let note of notes | async; let id = index;">
+        <div class="note">
+          <ul class="note">
+            <!-- <a class="note-title" (click)="toggleDisplay()"><p class="note-title">{{ note.title }}</p></a> -->
+            <div class="note-header">
+              <a class="note-title" (click)="hideme[note.id] = !hideme[note.id]" (*ngSwitchDefault)="hideme[id] = true">
+                <p class="note-title">{{ note.title }}</p>
+              </a>
+              <a class="note-favorite" (click)="debug(note)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-star"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
+                </svg>
+              </a>
+            </div>
+            <!-- <p class="note-content" [hidden]="isShow">{{ note.content }}</p> -->
+            <p class="note-content" [hidden]="!hideme[note.id]">{{ note.content }}</p>
+            <a class="note-delete" [hidden]="!hideme[note.id]" (click)="deleteNote(note)"
+              style="text-decoration: underline;">Delete</a>
+          </ul>
+        </div>
+      </li>
+    </div>
   </div>
+
+  <ng-template #showLogin>
+    <div class="auth">
+      <div class="auth-header">
+        <a (click)="showCreateUserForm()">Register</a>
+        <a (click)="showLoginUserForm()">Login</a>
+      </div>
+      <div *ngif="showCreateUserForm == true">
+        <form (submit)="signUpWithEmailAndPassword()" #createForm="ngForm">
+
+          <label for="input-mail-register">Mail</label>
+          <input type="text" name="input-mail-register" [(ngModel)]="user.email" id="input-mail-register">
+          <!-- <input type="text" name="input-mail" id="input-mail"> -->
+
+          <label for="input-password-register">Password</label>
+          <input type="password" name="input-password-register" [(ngModel)]="user.password"
+            id="input-password-register">
+          <!-- <input type="password" name="input-password" id="input-password"> -->
+
+          <input type="submit" [disabled]="!createForm.valid" value="Sign Up" class="submit-user-register">
+
+        </form>
+      </div>
+      <div *ngIf="showLoginUserInputForm == true">
+        <form *ngif="showLoginUserForm" (submit)="signInWithEmailPassword()" #loginForm="ngForm">
+          <label for="input-mail-login">Mail</label>
+          <input type="text" name="input-mail-signin" [(ngModel)]="user.email" id="input-mail-signin">
+          <!-- <input type="text" name="input-mail" id="input-mail"> -->
+
+          <label for="input-password-login">Password</label>
+          <input type="password" name="input-password-signin" [(ngModel)]="user.password" id="input-password-signin">
+          <!-- <input type="password" name="input-password" id="input-password"> -->
+
+          <input type="submit" [disabled]="!loginForm.valid" value="Sign In" class="submit-user-login">
+        </form>
+      </div>
+    </div>
+  </ng-template>
 </div>
