--- a/app/src/app/note/note.component.scss
+++ b/app/src/app/note/note.component.scss
@@ -9,19 +9,57 @@ $secondary-dark: #9ea7aa;
 $text-primary: #b9b9b9;
 $text-secondary: #cad3d7;
 
+// * {
+//   font-size: 1.05em;
+// }
+
+// Extra small - it's smol
+#smol {
+  font-size: calc(.4em + .2vmin);
+}
+
+#small {
+  font-size: calc(.8em + .6vmin);
+}
+
+#medium {
+  font-size: calc(.8em + 1.1vmin);
+}
+
+#large {
+  font-size: calc(1em + 1.8vmin);
+}
+
+a.logout {
+  color: $text-primary;
+  cursor: pointer;
+  border: 2px solid $secondary;
+  padding: 0.2em;
+  border-radius: 0.3em;
+  background-color: $secondary-light;
+}
+
+a.logout:hover {
+  animation: tprimaryToRed 0.3s forwards;
+}
+
+
 .note-form {
-  border-left: 0.7em solid $secondary;
+  border-left: calc(.5em + .4vmin) solid $secondary;
   border-radius: 0.3em;
   background-color: rgba($secondary, 0.08);
   margin-top: 3em;
   padding: 0.5em;
 
+  .note-tip-create-note {
+    color: $secondary;
+  }
+
   .note-title {
     color: $primary-dark;
-    font-weight: 700;
+    font-weight: 600;
     margin-bottom: 0;
-    margin-left: 0.5em;
-    font-size: 2.5em;
+    // font-size: 2.5em;
     margin-top: 0;
     text-align: center;
   }
@@ -50,14 +88,14 @@ $text-secondary: #cad3d7;
     cursor: text;
   }
 
-  input.note-input {
-    font-size: 1.5em;
-  }
+  // input.note-input {
+  //   font-size: 1.5em;
+  // }
 
   textarea.note-input {
     overflow: auto;
     resize: none;
-    font-size: 1.1em;
+    // font-size: 1.1em;
   }
 
   input.note-submit {
@@ -71,7 +109,7 @@ $text-secondary: #cad3d7;
     color: $secondary-dark;
     background-color: $secondary-light;
 
-    font-size: 1em;
+    // font-size: 1em;
     padding: 0.3em;
   }
 }
@@ -91,14 +129,24 @@ $text-secondary: #cad3d7;
     }
 
     div.note {
-      border-left: 0.7em solid $secondary;
+      border-left: calc(.5em + .3vmin) solid $secondary;
       border-radius: 0.3em;
       background-color: rgba($secondary, 0.08);
 
+      .note-tip-show-content {
+        color: $secondary;
+      }
+
       .note-title {
         color: $primary-dark;
-        font-size: 1.5em;
-        font-weight: 700;
+        font-weight: 600;
+        margin-bottom: 0;
+        margin-left: 0;
+        cursor: pointer;
+      }
+
+      .note-title-plus {
+        color: $primary-dark;
         margin-bottom: 0;
         cursor: pointer;
       }
@@ -124,22 +172,86 @@ $text-secondary: #cad3d7;
   }
 
   a.note-delete:hover {
-    animation: aNoteDeleteHover 0.4s forwards;
+    animation: tprimaryToRed 0.4s forwards;
   }
 }
 
 .auth {
-  background-color: rgba($secondary, 0.1);
-  border-left: 0.7em solid $secondary;
+  background-color: rgba($secondary, 0.15);
+  border-left: calc(.5em + .4vmin) solid $secondary;
   border-radius: 0.3em;
   text-align: center;
+  width: fit-content;
+  padding-right: calc(2em + 1.8vmin);
+  padding-left: calc(2em + 1.8vmin);
+  height: fit-content;
+  padding: 2em;
+  margin: 0 auto;
+  position: relative;
+  top: calc(7em + 5vmin);
 
-  a {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+  }
+
+  // label {
+  //   font-size: 120%;
+  // }
+
+  .auth-header {
+    margin-bottom: 1.2em;
+    margin-top: 1em;
+    a:hover {
+      animation: aAuthHeaderHover 0.3s forwards;
+    }
+    a:target {
+      animation: aAuthHeaderHover 0.3s forwards;
+    }
+  }
+
+  a.title {
     color: $text-primary;
-    font-size: 1.5em;
+    // font-size: 1.5em;
     cursor: pointer;
     margin: 1em;
+    width: 50%;
+  }
 
+  a.already-or-not-account {
+    color: $text-secondary;
+    // font-size: 0.85em;
+    margin-bottom: 1em;
+  }
+
+  input.submit-user-register,
+  input.submit-user-login {
+    display: block;
+    box-sizing: border-box;
+    margin: 0 auto;
+    text-align: center;
+    border: 2px solid $secondary;
+    border-radius: 0.3em;
+    color: #868686;
+    background-color: $secondary-light;
+    // font-size: 1em;
+    padding: 0.3em;
+    margin-bottom: 1em;
+    cursor: pointer;
+  }
+
+  .input-mail-login,
+  .input-password-login,
+  .input-mail-register,
+  .input-password-register {
+    margin-bottom: 1.3em;
+    border: 2px solid $secondary;
+    border-radius: 0.3em;
+    padding: 0.3em;
+    cursor: text;
+    width: 50%;
   }
 }
 
@@ -152,12 +264,13 @@ $text-secondary: #cad3d7;
   }
 }
 
-@keyframes aNoteDeleteHover {
+@keyframes tprimaryToRed {
   from {
     color: $text-primary;
   }
   to {
     color: red;
+    border-color: red;
   }
 }
 
@@ -167,5 +280,14 @@ $text-secondary: #cad3d7;
   }
   to {
     color: orange;
+  }
+}
+
+@keyframes aAuthHeaderHover {
+  from {
+    color: $text-primary;
+  }
+  to {
+    color: #616060;
   }
 }
