--- a/app/src/app/note/note.component.html
+++ b/app/src/app/note/note.component.html
@@ -7,18 +7,20 @@
 
     <form (submit)="addNote(user.uid)" class="note-form">
       <a (click)="hideNoteForm = !hideNoteForm">
-        <p id="large" class="note-title">New Note <strong [hidden]="!hideNoteForm"><p id="smol" style="font-size: 0.7em;" class="note-tip-create-note">Click to open note creation</p></strong></p>
+        <p id="large" class="note-title">New Note <strong [hidden]="!hideNoteForm">
+            <p id="smol" style="font-size: 0.7em;" class="note-tip-create-note">Click to open note creation</p>
+          </strong></p>
       </a>
       <!-- Note title -->
       <div [hidden]="hideNoteForm">
         <label id="medium" for="note-input-title" class="note-input">Title</label>
-        <input id="medium" type="text" name="noteInputTitle" id="note-input-title" class="note-input" [(ngModel)]="newNote.title"
-          maxlength="200" />
+        <input id="medium" type="text" name="noteInputTitle" id="note-input-title" class="note-input"
+          [(ngModel)]="newNote.title" maxlength="200" />
 
         <!-- Note content -->
         <label id="medium" for="note-input-content" class=" note-input">Content</label>
-        <textarea id="medium" type="text" name="noteInputContent" id="note-input-content" class="note-input" cols="30" rows="10"
-          maxleng th="1000" [(ngModel)]="newNote.content"></textarea>
+        <textarea id="medium" type="text" name="noteInputContent" id="note-input-content" class="note-input" cols="30"
+          rows="10" maxleng th="1000" [(ngModel)]="newNote.content"></textarea>
 
         <input id="small" type="submit" value="Add note" class="note-submit">
       </div>
@@ -30,16 +32,21 @@
           <ul class="note">
             <!-- <a class="note-title" (click)="toggleDisplay()"><p class="note-title">{{ note.title }}</p></a> -->
             <div class="note-header">
-              <a id="large" class="note-title" (click)="hideme[note.id] = !hideme[note.id]" (*ngSwitchDefault)="hideme[id] = true">
+              <a id="large" class="note-title" (click)="hideme[note.id] = !hideme[note.id]"
+                (*ngSwitchDefault)="hideme[id] = true">
                 <p class="note-title">{{ note.title }}</p>
                 <p id="smol" class="note-tip-show-content" [hidden]="hideme[note.id]">Click to show content</p>
               </a>
               <a class="note-favorite" (click)="debug(note)">
-                <svg *ngIf="noteIsFavorite(note)" xmlns="http://www.w3.org/2000/svg" width="20" height="20" style="border: 2px solid orange;" fill="red" class="bi bi-star-fill" viewBox="0 0 16 16">
-                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                <svg *ngIf="noteIsFavorite(note)" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                  style="border: 2px solid orange;" fill="red" class="bi bi-star-fill" viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
                 </svg>
-                <svg *ngIf="noteIsFavorite(note)" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="orange" class="bi bi-star-fill" viewBox="0 0 16 16">
-                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                <svg *ngIf="noteIsFavorite(note)" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                  fill="orange" class="bi bi-star-fill" viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
                 </svg>
               </a>
             </div>
@@ -47,6 +54,8 @@
             <p id="medium" class="note-content" [hidden]="!hideme[note.id]">{{ note.content }}</p>
             <a id="medium" class="note-delete" [hidden]="!hideme[note.id]" (click)="deleteNote(note)"
               style="text-decoration: underline;">Delete</a>
+            <a id="medium" class="note-edit" [hidden]="!hideme[note.id]" (click)="openNoteEditor(note)"
+              style="text-decoration: underline;">Edit</a>
           </ul>
         </div>
       </li>
@@ -64,8 +73,8 @@
         <form (submit)="signUpWithEmailAndPassword()" #createForm="ngForm">
 
           <label id="medium" for="input-mail-register">Mail</label>
-          <input id="medium"type="email" name="input-mail-register" class="input-mail-register" [(ngModel)]="user.email"
-            id="input-mail-register">
+          <input id="medium" type="email" name="input-mail-register" class="input-mail-register"
+            [(ngModel)]="user.email" id="input-mail-register">
           <!-- <input type="text" name="input-mail" id="input-mail"> -->
 
           <label id="medium" for="input-password-register">Password</label>
@@ -84,13 +93,13 @@
         <!-- [hidden]="!showLoginUserForm" -->
         <form (submit)="signInWithEmailPassword()" #loginForm="ngForm">
           <label id="medium" for="input-mail-login">Mail</label>
-          <input id="medium" type="email" name="input-mail-login" class="input-mail-login" [(ngModel)]="user.email"
+          <input required id="medium" type="email" name="input-mail-login" class="input-mail-login" [(ngModel)]="user.email"
             id="input-mail-login">
           <!-- <input type="text" name="input-mail" id="input-mail"> -->
 
           <label id="medium" for="input-password-login">Password</label>
-          <input id="medium" type="password" name="input-password-login" class="input-password-login" [(ngModel)]="user.password"
-            id="input-password-login">
+          <input required id="medium" type="password" name="input-password-login" class="input-password-login"
+            [(ngModel)]="user.password" id="input-password-login">
           <!-- <input type="password" name="input-password" id="input-password"> -->
 
           <input id="medium" type="submit" [disabled]="!loginForm.valid" value="Login" class="submit-user-login">
@@ -102,4 +111,30 @@
       </div>
     </div>
   </ng-template>
+</div>
+
+<div class="note_editor" *ngIf="showNoteEditor">
+  <div *ngIf="afAuth.user | async as user; else showLogin">
+
+    <form (submit)="editNote(user.uid, editor_note)" class="note-form">
+      <a (click)="hideNoteForm = !hideNoteForm">
+        <p id="large" class="note-title">New Note <strong [hidden]="!hideNoteForm">
+            <p id="smol" style="font-size: 0.7em;" class="note-tip-create-note">Click to open note creation</p>
+          </strong></p>
+      </a>
+      <!-- Note title -->
+      <div>
+        <label id="medium" for="note-input-title" class="note-input">Title</label>
+        <input id="medium" type="text" name="noteInputTitle" id="note-input-title" class="note-input"
+          [(ngModel)]="edit_note.title" maxlength="200" />
+
+        <!-- Note content -->
+        <label id="medium" for="note-input-content" class=" note-input">Content</label>
+        <textarea id="medium" type="text" name="noteInputContent" id="note-input-content" class="note-input" cols="30"
+          rows="10" maxleng th="1000" [(ngModel)]="edit_note.content"></textarea>
+
+        <input id="small" type="submit" value="Add note" class="note-submit">
+      </div>
+    </form>
+  </div>
 </div>
