--- a/app/src/app/note/note.component.scss
+++ b/app/src/app/note/note.component.scss
@@ -15,15 +15,15 @@ $text-secondary: #cad3d7;
 
 // Extra small - it's smol
 #smol {
-  font-size: calc(.4em + .2vmin);
+  font-size: calc(0.4em + 0.2vmin);
 }
 
 #small {
-  font-size: calc(.8em + .6vmin);
+  font-size: calc(0.8em + 0.6vmin);
 }
 
 #medium {
-  font-size: calc(.8em + 1.1vmin);
+  font-size: calc(0.8em + 1.1vmin);
 }
 
 #large {
@@ -43,9 +43,8 @@ a.logout:hover {
   animation: tprimaryToRed 0.3s forwards;
 }
 
-
 .note-form {
-  border-left: calc(.5em + .4vmin) solid $secondary;
+  border-left: calc(0.5em + 0.4vmin) solid $secondary;
   border-radius: 0.3em;
   background-color: rgba($secondary, 0.08);
   margin-top: 3em;
@@ -129,7 +128,7 @@ a.logout:hover {
     }
 
     div.note {
-      border-left: calc(.5em + .3vmin) solid $secondary;
+      border-left: calc(0.5em + 0.3vmin) solid $secondary;
       border-radius: 0.3em;
       background-color: rgba($secondary, 0.08);
 
@@ -160,6 +159,20 @@ a.logout:hover {
         cursor: pointer;
         color: $text-primary;
       }
+
+      a.note-edit {
+        margin: .2em;
+        cursor: pointer;
+        color: $text-primary;
+      }
+
+      a.note-delete:hover {
+        animation: tprimaryToRed 0.4s forwards;
+      }
+
+      a.note-edit:hover {
+        animation: tprimaryToBlue 0.4s forwards;
+      }
     }
   }
 
@@ -170,15 +183,11 @@ a.logout:hover {
   a.note-favorite:hover {
     animation: aNoteFavoriteHover 0.5s forwards;
   }
-
-  a.note-delete:hover {
-    animation: tprimaryToRed 0.4s forwards;
-  }
 }
 
 .auth {
   background-color: rgba($secondary, 0.15);
-  border-left: calc(.5em + .4vmin) solid $secondary;
+  border-left: calc(0.5em + 0.4vmin) solid $secondary;
   border-radius: 0.3em;
   text-align: center;
   width: fit-content;
@@ -255,6 +264,15 @@ a.logout:hover {
   }
 }
 
+.note_editor {
+  background-color: rgba($secondary-dark, 0.8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+
 @keyframes divNoteHover {
   from {
     background-color: rgba($secondary, 0.08);
@@ -271,6 +289,15 @@ a.logout:hover {
   to {
     color: red;
     border-color: red;
+  }
+}
+
+@keyframes tprimaryToBlue {
+  from {
+    color: $text-primary;
+  }
+  to {
+    color: rgb(0, 119, 255);
   }
 }
 
