--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class="container">
-
-</div>
+<header>
+  <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+</header>
 
 <div class="container">
   <router-outlet></router-outlet>
