Note Editing is a thing !!!

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -7,3 +7,8 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+
+<div class="footer">
+  <a routerLink="/changelog"><p>Changelog</p></a>
+</div>
